[gd_scene load_steps=14 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://shader/edge.shader" type="Shader" id=2]
[ext_resource path="res://theme_gray.tres" type="Theme" id=3]
[ext_resource path="res://font/Voltaire-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://node/model_mesh.tscn" type="PackedScene" id=5]

[sub_resource type="DynamicFont" id=1]
size = 12
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 12
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=4]
size = 12
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
size = 12
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=6]
size = 12
outline_size = 3
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 4 )

[sub_resource type="Environment" id=7]
background_mode = 1
background_color = Color( 0.752941, 0.752941, 0.752941, 1 )

[sub_resource type="QuadMesh" id=8]
size = Vector2( 2, 2 )

[sub_resource type="ShaderMaterial" id=9]
shader = ExtResource( 2 )
shader_param/edge_range = 1000.0
shader_param/edge_size = 1.0
shader_param/screen_w = 960.0
shader_param/screen_h = 540.0

[node name="main" type="Spatial"]
script = ExtResource( 1 )

[node name="ui" type="Control" parent="."]
margin_right = 960.0
margin_bottom = 544.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tween" type="Tween" parent="ui"]

[node name="knob_U" type="Panel" parent="ui"]
margin_left = 16.0
margin_top = -16.0
margin_right = 736.0
margin_bottom = 16.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="knob_D" type="Panel" parent="ui"]
margin_left = 16.0
margin_top = 528.0
margin_right = 736.0
margin_bottom = 560.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spin_x" type="SpinBox" parent="ui/knob_D"]
margin_left = 480.0
margin_top = -496.0
margin_right = 544.0
margin_bottom = -480.0
min_value = -1000.0
max_value = 1000.0
align = 1
prefix = "X:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spin_y" type="SpinBox" parent="ui/knob_D"]
margin_left = 560.0
margin_top = -496.0
margin_right = 624.0
margin_bottom = -480.0
min_value = -1000.0
max_value = 1000.0
align = 1
prefix = "Y:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spin_z" type="SpinBox" parent="ui/knob_D"]
margin_left = 640.0
margin_top = -496.0
margin_right = 704.0
margin_bottom = -480.0
min_value = -1000.0
max_value = 1000.0
align = 1
prefix = "Z:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="knob_L" type="Panel" parent="ui"]
margin_left = -16.0
margin_top = -16.0
margin_right = 16.0
margin_bottom = 560.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_fullscreen" type="Button" parent="ui/knob_L"]
margin_left = 24.0
margin_top = 48.0
margin_right = 56.0
margin_bottom = 80.0
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
text = "M"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_transparent" type="Button" parent="ui/knob_L"]
margin_left = 24.0
margin_top = 96.0
margin_right = 56.0
margin_bottom = 128.0
focus_mode = 0
toggle_mode = true
enabled_focus_mode = 0
text = "T"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_exit" type="Button" parent="ui/knob_L"]
margin_left = 24.0
margin_top = 496.0
margin_right = 56.0
margin_bottom = 528.0
focus_mode = 0
enabled_focus_mode = 0
text = "Q"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="panel" type="Panel" parent="ui"]
margin_left = 736.0
margin_top = -16.0
margin_right = 976.0
margin_bottom = 560.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_version" type="Label" parent="ui/panel"]
margin_left = 64.0
margin_top = 528.0
margin_right = 208.0
margin_bottom = 544.0
custom_fonts/font = SubResource( 1 )
text = "Version 0.0.4"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_reset" type="Button" parent="ui/panel"]
margin_left = 16.0
margin_top = 32.0
margin_right = 208.0
margin_bottom = 64.0
focus_mode = 0
theme = ExtResource( 3 )
text = "Reset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="models" type="ItemList" parent="ui/panel"]
margin_left = 16.0
margin_top = 80.0
margin_right = 208.0
margin_bottom = 352.0
theme = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn_shader" type="OptionButton" parent="ui/panel"]
margin_left = 16.0
margin_top = 368.0
margin_right = 208.0
margin_bottom = 400.0
focus_mode = 0
enabled_focus_mode = 0
text = "Edge"
align = 1
items = [ "Off", null, false, 0, null, "Edge", null, false, 1, null, "Normal", null, false, 2, null, "Depth", null, false, 3, null ]
selected = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_edge_depth" type="Label" parent="ui/panel"]
margin_left = 16.0
margin_top = 464.0
margin_right = 64.0
margin_bottom = 485.0
text = "Depth"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="edge_depth" type="HScrollBar" parent="ui/panel"]
margin_left = 64.0
margin_top = 464.0
margin_right = 208.0
margin_bottom = 480.0
min_value = 1024.0
max_value = 66560.0
step = 1024.0
page = 1024.0
value = 1024.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="value" type="Label" parent="ui/panel/edge_depth"]
margin_left = -112.0
margin_right = -64.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_edge_size" type="Label" parent="ui/panel"]
margin_left = 16.0
margin_top = 496.0
margin_right = 64.0
margin_bottom = 517.0
text = "Size"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="edge_size" type="HSlider" parent="ui/panel"]
margin_left = 64.0
margin_top = 496.0
margin_right = 208.0
margin_bottom = 512.0
min_value = 1.0
max_value = 3.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="value" type="Label" parent="ui/panel/edge_size"]
margin_left = -112.0
margin_right = -64.0
margin_bottom = 16.0
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1

[node name="lbl_desc" type="Label" parent="ui/panel"]
margin_left = -704.0
margin_top = 464.0
margin_right = -640.0
margin_bottom = 560.0
custom_fonts/font = SubResource( 5 )
text = "Mouse L:
Mouse R:
Mouse M:
TAB:"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lbl_text" type="Label" parent="ui/panel/lbl_desc"]
margin_left = 80.0
margin_right = 175.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 6 )
text = "X and Y Rotation
Z Rotation
Camera Move
Hide/Show UI"

[node name="btn_cam" type="OptionButton" parent="ui/panel"]
margin_left = 16.0
margin_top = 416.0
margin_right = 128.0
margin_bottom = 448.0
focus_mode = 0
enabled_focus_mode = 0
text = "Perspective"
align = 1
items = [ "Perspective", null, false, 0, null, "Orthogonal", null, true, 1, null, "Frustum", null, false, 2, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="spin_fov" type="SpinBox" parent="ui/panel/btn_cam"]
margin_left = 128.0
margin_right = 192.0
margin_bottom = 32.0
min_value = 30.0
max_value = 120.0
step = 5.0
value = 60.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cam" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 10 )
environment = SubResource( 7 )
projection = 2
current = true
fov = 60.0
size = 0.1
far = 2048.0

[node name="render_screen" type="CSGMesh" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.7912, 0 )
mesh = SubResource( 8 )
material = SubResource( 9 )

[node name="base_control" type="Spatial" parent="."]

[node name="model_mesh" parent="base_control" instance=ExtResource( 5 )]
[connection signal="gui_input" from="ui" to="." method="_on_ui_gui_input"]
[connection signal="gui_input" from="ui/knob_U" to="." method="_on_knob_U_gui_input"]
[connection signal="gui_input" from="ui/knob_D" to="." method="_on_knob_D_gui_input"]
[connection signal="value_changed" from="ui/knob_D/spin_x" to="." method="_on_spin_x_value_changed"]
[connection signal="value_changed" from="ui/knob_D/spin_y" to="." method="_on_spin_y_value_changed"]
[connection signal="value_changed" from="ui/knob_D/spin_z" to="." method="_on_spin_z_value_changed"]
[connection signal="gui_input" from="ui/knob_L" to="." method="_on_knob_L_gui_input"]
[connection signal="toggled" from="ui/knob_L/btn_fullscreen" to="." method="_on_btn_fullscreen_toggled"]
[connection signal="toggled" from="ui/knob_L/btn_transparent" to="." method="_on_btn_transparent_toggled"]
[connection signal="pressed" from="ui/knob_L/btn_exit" to="." method="_on_btn_exit_pressed"]
[connection signal="gui_input" from="ui/panel" to="." method="_on_panel_gui_input"]
[connection signal="pressed" from="ui/panel/btn_reset" to="." method="_on_btn_reset_pressed"]
[connection signal="item_selected" from="ui/panel/models" to="." method="_on_models_item_selected"]
[connection signal="item_selected" from="ui/panel/btn_shader" to="." method="_on_btn_shader_item_selected"]
[connection signal="value_changed" from="ui/panel/edge_depth" to="." method="_on_edge_range_value_changed"]
[connection signal="value_changed" from="ui/panel/edge_size" to="." method="_on_edge_size_value_changed"]
[connection signal="item_selected" from="ui/panel/btn_cam" to="." method="_on_btn_cam_item_selected"]
[connection signal="value_changed" from="ui/panel/btn_cam/spin_fov" to="." method="_on_spin_fov_value_changed"]
